<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/Category_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/Category_menu" />
    </group>

    <group android:id="@+id/foodList_group">
      <item
            android:id="@+id/nav_foodList"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_foodlist" />
    </group>
    <group android:id="@+id/comment_group">
        <item
            android:id="@+id/nav_commentList"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/menu_Comment_list" />
    </group>
    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
    </group>
    <group android:id="@+id/user_group">
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/Sign_out" />
</group>
</menu>
